alterações luan merge

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,54 @@ obj/Debug/netcoreapp3.1/Razor/Views/Shared/_Layout.cshtml.g.cs
 obj/Debug/netcoreapp3.1/Razor/Views/Shared/Error.cshtml.g.cs
 obj/Release/netcoreapp3.1/Padronizei.assets.cache
 obj/Release/netcoreapp3.1/Padronizei.csprojAssemblyReference.cache
+bin/Debug/netcoreapp3.1/Padronizei.dll
+bin/Debug/netcoreapp3.1/Padronizei.dll
+bin/Debug/netcoreapp3.1/Padronizei.Views.dll
+bin/Debug/netcoreapp3.1/Padronizei.deps.json
+bin/Debug/netcoreapp3.1/Padronizei.dll
+bin/Debug/netcoreapp3.1/Padronizei.pdb
+bin/Debug/netcoreapp3.1/Padronizei.Views.dll
+bin/Debug/netcoreapp3.1/Padronizei.Views.pdb
+obj/Padronizei.csproj.nuget.dgspec.json
+obj/Padronizei.csproj.nuget.g.props
+obj/project.assets.json
+obj/project.nuget.cache
+obj/Debug/netcoreapp3.1/Padronizei
+obj/Debug/netcoreapp3.1/Padronizei.csproj.CoreCompileInputs.cache
+obj/Debug/netcoreapp3.1/Padronizei.csprojAssemblyReference.cache
+obj/Debug/netcoreapp3.1/Padronizei.dll
+obj/Debug/netcoreapp3.1/Padronizei.pdb
+obj/Debug/netcoreapp3.1/Padronizei.RazorCoreGenerate.cache
+obj/Debug/netcoreapp3.1/Padronizei.Views.dll
+obj/Debug/netcoreapp3.1/Padronizei.Views.pdb
+obj/Debug/netcoreapp3.1/project.razor.json
+obj/Debug/netcoreapp3.1/Razor/Views/_ViewStart.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Colaborador/Create.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Colaborador/Delete.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Colaborador/Details.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Colaborador/Edit.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Colaborador/Index.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Conteudo/Create.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Conteudo/Delete.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Conteudo/Details.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Conteudo/Edit.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Conteudo/Index.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Departamento/Create.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Departamento/Delete.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Departamento/Details.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Departamento/Edit.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Departamento/Index.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/GrupoTrabalho/Create.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/GrupoTrabalho/Delete.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/GrupoTrabalho/Details.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/GrupoTrabalho/Edit.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/GrupoTrabalho/Index.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Home/Sobre.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Organizacao/Create.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Organizacao/Delete.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Organizacao/Details.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Organizacao/Edit.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Organizacao/Index.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Shared/_Layout.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Razor/Views/Shared/Error.cshtml.g.cs
