--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ obj/Debug/netcoreapp3.1/Razor/Views/Organizacao/Index.cshtml.g.cs
 obj/Debug/netcoreapp3.1/Razor/Views/Shared/_Layout.cshtml.g.cs
 obj/Debug/netcoreapp3.1/Razor/Views/Shared/Error.cshtml.g.cs
 *.cshtml.g.cs
+obj/Debug/netcoreapp3.1/Padronizei.csprojAssemblyReference.cache
