Luan projeto aberto no VS

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,5 @@ obj/Debug/netcoreapp3.1/Razor/Views/Organizacao/Index.cshtml.g.cs
 obj/Debug/netcoreapp3.1/Razor/Views/Shared/_Layout.cshtml.g.cs
 obj/Debug/netcoreapp3.1/Razor/Views/Shared/Error.cshtml.g.cs
 *.cshtml.g.cs
+/.vs/Padronizei/DesignTimeBuild/.dtbcache.v2
+/obj/Release/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
